name:                ShowOnSwissMap
version:             0.2.0
synopsis:            Show GPS location on Swiss map from a jpg file taken in Switerland
description:         Show GPS location on Swiss map from a jpg file taken in Switerland
homepage:            http://www.github.com/hansroland/swissgeo
license:             BSD3
license-file:        LICENSE
author:              Roland Senn
maintainer:          rsx@bluewin.ch
copyright:           Copyright by Roland Senn
category:            Data
build-type:          Simple
cabal-version:       >=1.18
 
executable ShowOnSwissMap
    default-language:    Haskell2010
    build-depends: base >=4 && < 5
                   , hexif >= 0.1 && < 0.2
                   , parsec >=3.1 && < 3.2
                   , process >= 1.1 && < 1.2
                   , hledger >= 0.23 && < 0.24
                   , swissgeo >= 0.2 && < 0.3
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    ghc-options: -Wall
 
